# ChangeLog for dev-util/netbeans
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.131 2009/12/28 14:56:17 betelgeuse Exp $

  28 Dec 2009; Petteri Räty <betelgeuse@gentoo.org>
  netbeans-5.5.1-r1.ebuild:
  Filter new slots of ecj-3.5 reported in bug #295678.

*netbeans-6.8-r1 (22 Dec 2009)

  22 Dec 2009; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-6.8.ebuild,
  +netbeans-6.8-r1.ebuild:
  Fixed bug #297749

*netbeans-6.8 (10 Dec 2009)

  10 Dec 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_rc2.ebuild, +netbeans-6.8.ebuild:
  Version bump

*netbeans-6.8_rc2 (04 Dec 2009)

  04 Dec 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_rc1.ebuild, +netbeans-6.8_rc2.ebuild:
  Version bump

*netbeans-6.8_rc1 (28 Nov 2009)

  28 Nov 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  -files/5.5-r2/jspparser-build.xml.patch,
  -files/5.5-r2/mdrant-build.xml-comments.patch,
  -files/5.5-r2/startscript.sh,
  files/6.8/nbbuild_templates_projectized.xml.patch,
  -netbeans-6.8_beta-r1.ebuild, +netbeans-6.8_rc1.ebuild:
  Version bump, also removed old unused files

*netbeans-6.8_beta-r1 (25 Oct 2009)

  25 Oct 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_beta.ebuild, +netbeans-6.8_beta-r1.ebuild:
  Fixed issue https://bugs.gentoo.org/show_bug.cgi?id=290468

*netbeans-6.8_beta (24 Oct 2009)

  24 Oct 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_alpha2.ebuild, +netbeans-6.8_beta.ebuild:
  Version bump

*netbeans-6.8_alpha2 (11 Oct 2009)

  11 Oct 2009; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.8/nbbuild_build.xml.patch, +netbeans-6.8_alpha2.ebuild,
  +files/6.8/nbbuild_templates_projectized.xml.patch:
  added netbeans 6.8 milestone 2 ebuild. though this ebuild will not be
  stabilized, i decided to put it into main tree because it is pretty stable